tooling/nargo_cli/tests/snapshots/compile_failure/assert_constant_dynamic_struct_field/execute__tests__assert_constant_dynamic_struct_field_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Argument is not constant
   ┌─ src/main.nr:11:5
   │
11 │     assert_constant(foo_dynamic);
   │     ----------------------------
   │
   = Call stack:
     1. src/main.nr:11:5

Aborting due to 1 previous error
